# ibkr-report-parser

./: .dockerignore  .editorconfig  .gcloudignore  .gitignore  Dockerfile  MANIFEST.in  README.md  app.yaml  cron.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: main.yml  nightly.yml  publish-to-ghcr.yml  publish-to-test-pypi.yml
ibkr_report/: __init__.py  __main__.py  cron.py  csv_events.py  definitions.py  exchangerates.py  i18n.py  matching.py  premiums.py  report.py  storage.py  tools.py  trade.py  website.py
ibkr_report/templates/: base.html  error.html  index.html  result.html
static/css/: main.css
static/js/: main.js
templates/: base.html  error.html  index.html  result.html
test-data/: data_currency_rate_over_1000.csv  data_dates_in_future.csv  data_deemed_acquisition_cost.csv  data_invalid_date.csv  data_multi_account.csv  data_numbers_within_quotes.csv  data_shorting_stocks.csv  data_single_account.csv  eurofxref-broken.csv
tests/: test_cron.py  test_exchange.py  test_i18n.py  test_report.py  test_smoke.py  test_storage.py
tests/test-data/: data_closedlot_without_trade.csv  data_deemed_acquisition_cost.csv  data_long_call_exercise.csv  data_long_put_exercise.csv  data_multi_account.csv  data_option_assignment.csv  data_prior_year_disposal.csv  data_short_cover_2024.csv  data_short_open_2023.csv  data_short_put_assign_2023.csv  data_short_put_sell_2024.csv  data_shorting_not_closed.csv  data_single_account.csv  data_single_account_2022.csv  data_symbol_mismatch.csv  (+3 more)
(+2 files in other folders)
